# autismdrive

./: .gitignore  LICENSE  README.md  build.sh  docker-compose.yml  init_db.sql  package-lock.json  package.json  prod_update.sh  pyproject.toml  reset-backend.sh  sonar-project.properties  start-backend.sh  start-db.sh  start-frontend.sh  start.sh  stop.sh  test-backend.sh  test-e2e.sh  test-frontend.sh
.github/workflows/: main.yml
backend/: .coveragerc  .gitignore  Dockerfile  README.md  containerrun.sh  data_export_service.py  pyproject.toml  requirements.txt  run.py  star.wsgi  tests.py
backend/app/: __init__.py  api_app.py  auth.py  create_app.py  data_importer.py  data_loader.py  database.py  elastic_index.py  email_prompt_service.py  email_service.py  enums.py  excel_service.py  export_service.py  export_xls_service.py  import_service.py  log_service.py  main.py  models.py  prompting_emails.py  question_service.py  rest_exception.py  schemas.py  url_for_endpoint_map.py  utils.py  views.py  wrappers.py
backend/config/: base.py  default.py  docker.py  load.py  logging.py  logging_example.py  mirror.py  slave.py  testing.py
backend/example_data/: all_studies.csv  categories.csv  chain_steps.csv  events.csv  locations.csv  participants.csv  resources.csv  studies.csv  trainings.csv  user_participants.csv  users.csv  webinars.csv  zip_code_coords.csv
backend/migrations/: env.py
backend/tests/: base_test.py  base_test_questionnaire.py  test_admin_notes.py  test_category.py  test_chain_steps.py  test_config.py  test_data_loader.py  test_data_transfer_logs.py  test_email_automation.py  test_events.py  test_export.py  test_import.py  test_import_export.py  test_import_export_logs.py  test_investigator.py  test_locations.py  test_organization.py  test_participant.py  test_questionnaire.py  test_resources.py  (+8 more)
frontend/: .browserslistrc  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  angular.json  babel.config.js  custom-webpack.config.js  cypress.config.ts  jest.config.js  jest.setup.ts  ngcc.config.js  nightwatch.conf.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
src/: index.html
(+929 files in other folders)
